[gd_scene load_steps=7 format=3 uid="uid://kax6f6tmshv6"]

[ext_resource type="Texture2D" uid="uid://b1phshs14mdo7" path="res://Assets/Enemies/Practice_Drone1.png" id="1_qo5l3"]
[ext_resource type="Script" path="res://actors/entities/Battleship.gd" id="2_k754i"]
[ext_resource type="AudioStream" uid="uid://rqyg6wryjs6x" path="res://Assets/sfx/enemy_kaboom.mp3" id="3_r3bf7"]
[ext_resource type="PackedScene" uid="uid://bgtflim44a81b" path="res://actors/extras/TTarget.tscn" id="4_fmi66"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbrio"]
bg_color = Color(0.509804, 0.498039, 0.505882, 1)
skew = Vector2(0.8, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7iol"]
bg_color = Color(0.6, 0.215686, 0.219608, 1)
skew = Vector2(0.8, 0)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[node name="Enemy" type="Sprite2D"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_qo5l3")
script = ExtResource("2_k754i")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Hurtbox"]
position = Vector2(-58.1111, 11.3333)
scale = Vector2(1.601, 1.601)
polygon = PackedVector2Array(-141.717, -43.3063, -21.1674, -72.0383, -7.42595, -65.7922, 40.0444, -68.9153, 45.0413, -67.0414, 59.4073, -71.4137, 70.6503, -79.5336, 85.6409, -78.909, 100.632, -95.7735, 114.998, -97.0227, 115.622, -82.6567, 128.114, -68.2906, 160.594, -68.9153, 163.092, -70.7891, 165.591, -86.4043, 178.708, -95.7735, 193.698, -95.7735, 206.191, -75.1613, 251.162, -60.1707, 258.658, -42.6816, 264.904, -34.5617, 266.153, 17.2809, 259.282, 29.7731, 257.409, 60.3789, 237.421, 75.9942, 213.686, 76.6188, 208.689, 71.6219, 183.705, 75.9942, 183.705, 89.111, 150.6, 74.1204, 120.619, 90.3602, 114.373, 82.2403, 124.991, 75.9942, 111.874, 74.745, 91.2624, 99.1047, -64.2654, 59.7543, -104.865, 60.3789, -118.606, 50.3852, -134.222, 50.3852, -142.342, 66.625, -197.932, 54.7575, -197.932, 41.6407, -194.809, 40.3914, -196.683, -18.9465, -199.181, -34.5617, -141.717, -44.5555, -141.717, -42.6816)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(3.10021, -8.88889)
scale = Vector2(24.1195, 2.67343)

[node name="Enemy_Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_r3bf7")
pitch_scale = 3.31
max_polyphony = 10

[node name="HP" type="ProgressBar" parent="."]
offset_left = -216.0
offset_top = 183.0
offset_right = 220.0
offset_bottom = 188.0
theme_override_styles/background = SubResource("StyleBoxFlat_qbrio")
theme_override_styles/fill = SubResource("StyleBoxFlat_b7iol")
value = 40.0
show_percentage = false

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Node2D" type="Node2D" parent="."]
visible = false
position = Vector2(233.134, -89.2855)

[node name="TTarget" parent="Node2D" instance=ExtResource("4_fmi66")]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="input_event" from="Hurtbox" to="." method="_on_hurtbox_input_event"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
